[gd_scene load_steps=20 format=2]

[ext_resource path="res://scenes/entities/player/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/images/player_anim_ph.png" type="Texture" id=2]
[ext_resource path="res://scenes/entities/player/PlayerStateAirborneNormal.gd" type="Script" id=3]
[ext_resource path="res://scenes/entities/player/PlayerStateGroundedUpright.gd" type="Script" id=4]
[ext_resource path="res://scenes/entities/player/PlayerPose.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/entities/Entity.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/entities/player/PlayerStateGroundedRolling.gd" type="Script" id=7]
[ext_resource path="res://scenes/entities/player/PlayerStateGroundedRevving.gd" type="Script" id=8]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "look_down"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}

[sub_resource type="Animation" id=8]
resource_name = "look_up"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 17 ]
}

[sub_resource type="Animation" id=10]
resource_name = "push"
length = 2.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 7, 6 ]
}

[sub_resource type="Animation" id=9]
resource_name = "rev"
length = 6.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=3]
resource_name = "roll"
length = 5.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5, 1 ]
}

[sub_resource type="Animation" id=4]
resource_name = "roll_fast"
length = 6.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 1, 4, 5, 1 ]
}

[sub_resource type="Animation" id=5]
resource_name = "run"
length = 4.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}

[sub_resource type="Animation" id=11]
resource_name = "skid"
length = 2.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 14, 15 ]
}

[sub_resource type="Animation" id=6]
resource_name = "walk"
length = 6.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13 ]
}

[node name="Player" instance=ExtResource( 6 )]
script = ExtResource( 1 )

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 2 )
hframes = 8
vframes = 5

[node name="Hitbox" parent="." index="1"]
radius = Vector2( 8, 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]
anims/RESET = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/look_down = SubResource( 7 )
anims/look_up = SubResource( 8 )
anims/push = SubResource( 10 )
anims/rev = SubResource( 9 )
anims/roll = SubResource( 3 )
anims/roll_fast = SubResource( 4 )
anims/run = SubResource( 5 )
anims/skid = SubResource( 11 )
anims/walk = SubResource( 6 )

[node name="Pose" parent="." index="3" instance=ExtResource( 5 )]

[node name="StateAirborneNormal" type="Node" parent="." index="4"]
script = ExtResource( 3 )

[node name="StateGroundedUpright" type="Node" parent="." index="5"]
script = ExtResource( 4 )

[node name="StateGroundedRolling" type="Node" parent="." index="6"]
script = ExtResource( 7 )

[node name="StateGroundedRevving" type="Node" parent="." index="7"]
script = ExtResource( 8 )
